@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-08T08:31:00Z",
-  "count_outdated" : 716,
-  "uniques_outdated" : 373,
-  "count" : 747,
+  "timestamp" : "2022-08-08T16:33:47Z",
+  "count_outdated" : 718,
+  "uniques_outdated" : 374,
+  "count" : 748,
   "uniques" : 389,
   "clones" : [
-    {
-      "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 1,
